@@ -1,3 +1,10 @@
+2004-06-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* matrix.tcl (_search): Fixed bug reported by Joachim Kock
+	  <kock@math.uqam.ca>, using his fix. Search went into an infinite
+	  loop if -nocase was used.
+	* matrix.test: Added a testcase.
+
 2004-05-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* matrix.test:    Added clean up commands to prevent tests
